@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.042.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -33,7 +33,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Moose" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "Test::Warnings" => 0
   },
   "VERSION" => "1.001005",
@@ -56,7 +56,7 @@ my %FallbackPrereqs = (
   "Module::Runtime" => 0,
   "Moo" => "1.000008",
   "Moose" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Test::Warnings" => 0,
   "strict" => 0,
   "warnings" => 0
