@@ -15,7 +15,7 @@ on 'test' => sub {
   requires "ExtUtils::MakeMaker" => "0";
   requires "File::Spec" => "0";
   requires "Moose" => "0";
-  requires "Test::More" => "0.89";
+  requires "Test::More" => "0";
   requires "Test::Warnings" => "0";
   requires "perl" => "5.006";
 };
@@ -34,6 +34,10 @@ on 'configure' => sub {
 
 on 'configure' => sub {
   recommends "ExtUtils::MakeMaker" => "7.00";
+};
+
+on 'configure' => sub {
+  suggests "JSON::PP" => "2.27300";
 };
 
 on 'develop' => sub {
@@ -60,6 +64,7 @@ on 'develop' => sub {
   requires "Dist::Zilla::Plugin::Manifest" => "0";
   requires "Dist::Zilla::Plugin::ManifestSkip" => "0";
   requires "Dist::Zilla::Plugin::MetaConfig" => "0";
+  requires "Dist::Zilla::Plugin::MetaData::BuiltWith" => "1.004000";
   requires "Dist::Zilla::Plugin::MetaJSON" => "0";
   requires "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14000001";
   requires "Dist::Zilla::Plugin::MetaTests" => "0";
@@ -78,7 +83,7 @@ on 'develop' => sub {
   requires "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => "0";
   requires "Dist::Zilla::Plugin::RunExtraTests" => "0";
   requires "Dist::Zilla::Plugin::Test::CPAN::Changes" => "0";
-  requires "Dist::Zilla::Plugin::Test::Compile::PerFile" => "0";
+  requires "Dist::Zilla::Plugin::Test::Compile::PerFile" => "0.003902";
   requires "Dist::Zilla::Plugin::Test::EOL" => "0";
   requires "Dist::Zilla::Plugin::Test::Kwalitee" => "0";
   requires "Dist::Zilla::Plugin::Test::MinimumVersion" => "0";
@@ -94,6 +99,7 @@ on 'develop' => sub {
   requires "Test::CPAN::Meta" => "0";
   requires "Test::EOL" => "0";
   requires "Test::Kwalitee" => "1.21";
+  requires "Test::MinimumVersion" => "0";
   requires "Test::More" => "0.96";
   requires "Test::Pod" => "1.41";
   requires "Test::Pod::Coverage" => "1.08";
@@ -105,5 +111,5 @@ on 'develop' => sub {
 
 on 'develop' => sub {
   suggests "Dist::Zilla::App::Command::bakeini" => "0.002005";
-  suggests "Dist::Zilla::PluginBundle::Author::KENTNL" => "2.025010";
+  suggests "Dist::Zilla::PluginBundle::Author::KENTNL" => "2.025021";
 };
