@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001005
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 1.001004 2015-12-20T12:04:26Z
  [Added / configure requires]
