@@ -1,6 +1,15 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 1.001005
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::MetaData::BuiltWith 1.004000
+ - Test::MinimumVersion
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.025010 → 2.025021
 
 1.001004 2015-12-20T12:04:26Z
  [Added / develop recommends]
