@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001005
+ [Added / configure suggests]
+ - JSON::PP 2.27300
 
 1.001004 2015-12-20T12:04:26Z
  [Added / test recommends]
