@@ -1,6 +1,15 @@
 Release history for Dist-Zilla-Util-BundleInfo
 
 {{$NEXT}}
+ [BugFix / 3]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-Util-BundleInfo/issues/3
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001004, see misc/*.deps* for details
+ - configure: (suggests: +1)
+ - develop: +2 ↑1 (suggests: ↑1)
+ - test: ↓1
 
 1.001004 2015-12-20T12:04:26Z e899016
  [Bugfix]
